# controllers/booksController.js
@@ -10,7 +10,7 @@ booksCont.getById = async (req, res) => {
   const id = req.params.id;
   const book = await booksModel.getBookById(id);
 
-  if (!book) res.send("Not found.").status(500);
+  if (!book) res.send("Not found.").status(400);
   else res.json(book);
 };
 
@@ -40,7 +40,35 @@ booksCont.addNew = async (req, res) => {
   );
 
   if (result) res.sendStatus(200);
-  else res.send("Error adding the new book.").status(500);
+  else res.send("Error adding the new book.").status(400);
+};
+
+booksCont.update = async (req, res) => {
+  /*  #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        $ref: "#/components/schemas/bookUpdate"
+                    }  
+                }
+            }
+        } 
+    */
+  const id = req.params.id;
+  const bookUpdate = req.body;
+  const result = await booksModel.updateBook(id, bookUpdate);
+
+  if (result) res.sendStatus(200);
+  else res.send("Error updating the book.").status(400);
+};
+
+booksCont.delete = async (req, res) => {
+  const id = req.params.id;
+  const result = await booksModel.deleteBook(id);
+
+  if (result) res.sendStatus(200);
+  else res.send("Error updating the book.").status(400);
 };
 
 module.exports = booksCont;
